# smartcar_ls2k0300

./: .gitignore  README.md  package-lock.json
.github/agents/: vision-route-supervisor.agent.md
RL/: .gitignore  README.md  __init__.py
RL/configs/: task_speed_pid_default.json
RL/data/raw_runs/sample_bootstrap/: meta.json  status.json
RL/envs/: __init__.py  speed_pid_env.py
RL/eval/: evaluate_policy.py
RL/models/: __init__.py  system_id.py
RL/train/: train_sac.py
build_codex_check/: project
build_local/: CMakeCache.txt  Makefile  cmake_install.cmake  project
docs/: fuzzy_pid_position_loop.md
lib-ncnn/driver/IPS_ST7789_Driver/: scp_send.sh
lib-ncnn/driver/TFT18_Driver/: scp_send.sh
lib-ncnn/driver/i2c_all_device/: lq_i2c_all_device.c
lib-ncnn/driver/i2c_all_device/ko/: lq_i2c_all_dev.ko
lib-ncnn/driver/i2c_icm42688_driver/ko/: lq_i2c_icm42688_drv.ko
lib-ncnn/driver/i2c_icm42688_driver/src/: lq_i2c_read_write_drv.c
lib-ncnn/driver/i2c_lsm6dsr_driver/ko/: lq_i2c_lsm6dsr_drv.ko
lib-ncnn/driver/i2c_lsm6dsr_driver/src/: lq_lsm6dsr_drv.c
lib-ncnn/driver/i2c_mpu6050_driver/ko/: lq_i2c_mpu6050_drv.ko
lib-ncnn/driver/i2c_mpu6050_driver/src/: lq_i2c_read_write_drv.c
lib-ncnn/driver/i2c_vl53l0x_driver/ko/: lq_i2c_vl53l0x_drv.ko
lib-ncnn/example/inc/: lq_all_demo.hpp
lib-ncnn/example/src/: 01_lq_gpio_basic_demo.cpp  02_lq_pwm_demo.cpp  03_lq_gtim_pwm_demo.cpp  04_lq_atim_pwm_demo.cpp  05_lq_encoder_pwm_demo.cpp  06_lq_canfd_demo.cpp  07_lq_ncnn_demo.cpp  08_lq_ips20_demo.cpp  09_lq_mpu6050_demo.cpp  10_lq_lsm6dsr_demo.cpp  11_lq_vl53l0x_demo.cpp  12_lq_udp_img_trans_demo.cpp  13_lq_udp_wavefrom_demo.cpp  14_lq_icm42688_demo.cpp
lib-ncnn/libraries/common/inc/: lq_base_class.hpp  lq_types.hpp  lq_utils.hpp
lib-ncnn/libraries/common/src/: lq_utils.cpp
lib-ncnn/libraries/drv/inc/: lq_camera.hpp  lq_camera_ex.hpp  lq_drv_inc.hpp  lq_module_load.hpp  lq_reg_adc.hpp  lq_reg_atim_pwm.hpp  lq_reg_gtim_pwm.hpp  lq_reg_pwm.hpp  lq_reg_pwm_encoder.hpp  lq_tcp_client.hpp  lq_timer.hpp  lq_uart.hpp  lq_udp_client.hpp
lib-ncnn/libraries/drv/src/: lq_camera.cpp  lq_reg_atim_pwm.cpp  lq_reg_gtim.pwm.cpp  lq_reg_pwm.cpp  lq_reg_pwm_encoder.cpp  lq_tcp_client.cpp  lq_timer.cpp  lq_uart.cpp  lq_udp_client.cpp
lib-ncnn/main/: CMakeLists.txt  build.sh  main.cpp  text.txt  toolchain_path.cmake  更新日志.md
libraries/zf_common/: zf_common_headfile.h
libraries/zf_device/: zf_device_imu_core.cpp  zf_device_imu_core.h  zf_device_ips200_fb.cpp  zf_device_ips200_fb.h  zf_device_uvc.cpp  zf_device_uvc.h
libraries/zf_driver/: zf_driver_encoder.cpp  zf_driver_encoder.h  zf_driver_pit_fd.h  zf_driver_tcp_client.cpp
project/code/app/beep_thread/: beep_thread.cpp  beep_thread.h
project/code/app/config_http_thread/: config_http_thread.cpp  config_http_thread.h
project/code/app/imu_thread/: imu_thread.cpp  imu_thread.h
project/code/app/line_follow_thread/: line_follow_thread.cpp  line_follow_thread.h
project/code/app/motor_thread/: motor_thread.cpp  motor_thread.h
project/code/app/screen_display_thread/: screen_display_thread.cpp  screen_display_thread.h
project/code/app/uart_thread/: uart_thread.cpp  uart_thread.h
project/code/app/vision_thread/: vision_thread.cpp  vision_thread.h
project/code/driver/battery/: battery.cpp  battery.h
project/code/driver/brushless/: brushless.cpp  brushless.h
project/code/driver/config/: smartcar_config.cpp  smartcar_config.h
project/code/driver/imu660ra/: imu660ra.cpp  imu660ra.h
project/code/driver/motor/: motor.cpp  motor.h
project/code/driver/pid/: pid.cpp  pid.h  pid_tuning.cpp  pid_tuning.h
project/code/driver/uart/: uart.h  (+1 more)
project/docs/: ncnn_deploy.md  project_vs_vision_algorithm_extract_基础视觉流程对比.md  uart_pid_protocol.md  upper_computer_uart_protocol.md  vision_algorithm_extract算法概述.md  vision_line_error_flow.md  vision_route_state_machine_实施方案.md  位置环与角速度环计算公式.md  十字原图边界到IPM数组完整流程.md  十字状态机.md  原图到IPM边界处理（按状态）.md  圆环状态机.md  圆环状态转移与状态处理（当前实现）.md  圆环重构版状态设计草案.md  巡线并级PID调参指南.md  当前代码视觉处理概述.md  状态机概述.md  环岛状态机全流程（当前代码）.md  视觉流程.md  视觉流程总报告（优化后，含全部状态分支）.md
project/out_ncnn_build/: CMakeCache.txt  Makefile  cmake_install.cmake  project
project/out_ncnn_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
project/out_ncnn_test/: CMakeCache.txt  Makefile  cmake_install.cmake
project/user/: CMakeLists.txt  build.sh  build_target.env  connection_presets.json  main.cpp  smartcar_config.toml  sync_connection_preset_to_toml.js
project/user/ncnn_model/: labels.txt  tiny_classifier_fp32.ncnn.param
tools/: ENVIRONMENT_SETUP.md  build_all_tools.sh  总目标.md
tools/f1_dashboard/: DASHBOARD_CONTRACT.md  index.html  package-lock.json  package.json
tools/f1_dashboard/src/: App.vue
tools/pc_receiver_js/: README.md  package-lock.json  package.json  server.js
tools/pc_receiver_js/public/: config.html  config_app.js  index.html  local_compute.html  local_compute_app.js  pid_tune.html  pid_tune_app.js  pipeline_worker.js  playback.html  playback_app.js  rl_train.html  rl_train_app.js  run_control_widget.js  shared_receiver_core.js  speed_chart.html  speed_chart_app.js
tools/pc_receiver_local_compute/: ARCHITECTURE.md  README.md  build_opencv_wasm.sh  build_wasm.sh  package-lock.json  package.json  server.js  wasm_sync_meta.js
tools/pc_receiver_local_compute/public/: app.js  index.html  pipeline_worker.js
tools/pc_receiver_local_compute/wasm_bridge/: CMakeLists.txt  DEPENDENCY_INVENTORY.md  smoke_test.cpp  web_vision_abi.cpp  web_vision_bridge.cpp  web_vision_bridge.h
tools/pc_receiver_local_compute/wasm_bridge/build_probe/: vision_web_bridge_smoke
tools/pc_receiver_local_compute/wasm_bridge/build_wasm/: vision_pipeline.js  vision_pipeline.wasm  vision_web_bridge_smoke.js  vision_web_bridge_smoke.wasm
tools/pc_receiver_local_compute/wasm_bridge/compat/: line_follow_thread.cpp  line_follow_thread.h  vision_frame_capture.cpp  zf_common_headfile.h
tools/pc_receiver_local_compute/wasm_bridge/compat/driver/vision/: vision_frame_capture.h  vision_image_processor.h
vision_algorithm_extract/: README.md
(+33 files in other folders)
